--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
             // 2. 更新編輯狀態
             editingId = id;
             document.getElementById('formTitle').textContent = `廣告活動與預算細節 (正在編輯: ${item.clientName} - ${item.date})`;
-            document.getElementById('saveButton').textContent = "🔄 更新核對結果";
+            document.getElementById('saveButton').textContent = "🔄 更新結果";
             
             // 3. 重新運行必填欄位邏輯以匹配載入的紀錄
             handleRequiredFields();
@@ -932,4 +932,5 @@
     </script>
 </body>
 </html>
+
 
