--- a/index.html
+++ b/index.html
@@ -461,12 +461,13 @@
     // 1. 請在這裡填寫您的 Firebase 設定物件 (重要!)
     // --------------------------------------------------
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_AUTH_DOMAIN",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_STORAGE_BUCKET",
-        messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyB7GaY2z3mKeD3bd9r_KVcd_VYMzz42c7c", 
+            authDomain: "budgetcheck-7a2e9.firebaseapp.com",
+            projectId: "budgetcheck-7a2e9",
+            storageBucket: "budgetcheck-7a2e9.firebasestorage.app", 
+            messagingSenderId: "1084663157523", 
+            appId: "1:1084663157523:web:4e8160c5c3da30f92380e6", 
+            measurementId: "G-81VM0XN7VC"
     }; 
     // --------------------------------------------------
     
@@ -868,4 +869,5 @@
 </body>
 
 </html>
+
 
