--- a/index.html
+++ b/index.html
@@ -1279,10 +1279,7 @@ filteredData.forEach(item => {
     // ... (表格行 HTML 程式碼：將 actionButton 放入表格單元格)
     tableHtml += `
         <tr id="row-${item.id}">
-            <td class="text-gray-500 text-xs">${item.id.substring(0, 4)}...</td>
-            <td>${actionButton}</td>
-            <td><button onclick="showDetailModal('${item.id}')" class="text-indigo-600 hover:text-indigo-800 text-xs font-medium">查看</button></td>
-        </tr>
+            <td class="text-gray-500 text-xs">${item.id.substring(0, 4)}...</td> <td class="text-sm">${item.date}</td> <td class="font-medium text-gray-700">${item.clientName}</td> <td>${item.executor} (${item.creatorEmail || 'N/A'})</td> <td>${item.reviewer || 'N/A'}</td> <td><span class="inline-block px-3 py-1 text-xs font-semibold rounded-full ${statusClass}">${resultText}</span></td> <td>${actionButton}</td> <td><button onclick="showDetailModal('${item.id}')" class="text-indigo-600 hover:text-indigo-800 text-xs font-medium">查看</button></td> </tr>
     `;
 });
 // 4. 結束表格
@@ -1539,6 +1536,7 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
 
 
