--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <!-- 備註 -->
                 <div class="mt-6">
                     <label for="notes" class="font-bold text-gray-800 mb-2 block">備註/修正說明</label>
-                    <textarea id="notes" name="notes" rows="3" placeholder="請填寫任何特殊情況或修正過程。" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500"></textarea>
+                   <textarea id="reviewNotes" name="reviewNotes" rows="3" placeholder="請填寫檢核意見或修正備註。" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500"></textarea>
                 </div>
 
                 <!-- 動作按鈕 -->
@@ -1586,6 +1586,7 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
 
 
