--- a/index.html
+++ b/index.html
@@ -1582,10 +1582,9 @@ async function openAdminPanel() {
                 return;
             }
             
-            // 設定登入/登出監聽器
-			// 【新增：在此處呼叫初始化函數，確保篩選器監聽器在頁面載入時綁定】
-			initFilterListeners(); <--- 請新增此行
-            onAuthStateChanged(auth, handleAuthStateChange);
+// 設定登入/登出監聽器
+			initFilterListeners(); 
+            onAuthStateChanged(auth, handleAuthStateChange);
             
             // 表單事件
             document.getElementById('checklistForm').addEventListener('submit', saveChecklist);
@@ -1673,6 +1672,7 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
 
 
