--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         
                         <!-- 預算金額核對 (Ad Budget) -->
                         <tr id="row-targetAmount" class="bg-yellow-50/50">
-                            <td class="font-bold text-indigo-700">廣告活動預算金額 (Budget)</td>
+                            <td class="font-bold text-indigo-700">廣告活動日預算金額 (Budget)</td>
                             <td>
                                 <label class="block text-xs font-semibold mb-1">最終設定的金額</label>
                                 <span class="text-gray-400 text-xs">（以當地貨幣計價）</span>
@@ -1682,6 +1682,7 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
 
 
